--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,7 @@
     }
    ],
    "source": [
-    "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
+    "art_vandelay = \"art vandelay\".title() # 'Art Vandelay'\n",
     "art_vandelay"
    ]
   },
@@ -187,7 +187,7 @@
     }
    ],
    "source": [
-    "ceo = \"Ceo\".upper # 'CEO'\n",
+    "ceo = \"Ceo\".upper() # 'CEO'\n",
     "ceo"
    ]
   },
