Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    },
    "outputs": [],
    "source": [
-    "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
+    "web_address = 'w''vandelay.com' # 'www.vandelay.com'\n",
     "web_address"
    ]
   },
