--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phone_num_three = phone_num_two + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,13 +320,6 @@
    "source": [
     "### Summary"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
