--- a/index.ipynb
+++ b/index.ipynb
@@ -307,23 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "must be str, not int",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-a630e6aad2f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mphone_num_three\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mphone_num_two\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "phone_num_three = phone_num_two + 1"
+    "phone_num_three = int(phone_num_two) + 1"
    ]
   },
   {
