Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,11 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553335"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "phone_num_three = int(phone_num_two) + 1"
+    "phone_num_three = int(phone_num_two) + 1\n",
+    "phone_num_three"
    ]
   },
   {
