Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,16 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7285553334"
+       "7285553336"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
    "source": [
     "phone_num_two = \"7285553334\" # 7285553336\n",
     "phone_num_two = int(phone_num_two) + 2\n",
-    "int(phone_num_two)"
+    "phone_num_two"
    ]
   },
   {
